# django-htmx-todo

./: .dockerignore  .gitattributes  Dockerfile  NOTICE  README.md  docker-compose.build.yml  docker-compose.labels.yml  docker-compose.override.yml  docker-compose.ports.yml  docker-compose.prod.yml  docker-compose.proxy.yml  docker-compose.yml  manage.py  pyproject.toml
docs/: README.md
src/django_htmx_todo/: __init__.py  __main__.py  asgi.py  settings.py  urls.py  wsgi.py
src/django_htmx_todo/login/: apps.py  middleware.py  urls.py  views.py
src/django_htmx_todo/login/templates/: login.html  logout_button.html  partial_login.html
src/django_htmx_todo/templates/: base.html
src/django_htmx_todo/todo/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/django_htmx_todo/todo/components/list_tasks/: list_tasks.html  list_tasks.py
src/django_htmx_todo/todo/components/task_preview/: task_preview.html  task_preview.py
src/django_htmx_todo/todo/migrations/: 0001_initial.py
src/django_htmx_todo/todo/templates/: base.html  base_task.html  create_task.html  display_tasks.html  list_tasks.html  partial_create_task.html  partial_update_task.html  task_preview.html  update_task.html
